// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders collectly with children 1`] = `
<div
  className="jsx-4151687426 page"
>
  <title
    className="jsx-4151687426"
  >
    後藤のブログ
  </title>
  <link
    className="jsx-4151687426"
    href="/favicon.ico"
    rel="icon"
  />
  <header
    className="jsx-4151687426"
  >
    <h1
      className="jsx-4151687426 site-title"
    >
      <a
        className="jsx-4151687426"
        href="/"
      >
        後藤のブログ
      </a>
    </h1>
  </header>
  <main
    className="jsx-4151687426"
  >
    
    <div
      className="jsx-4151687426 page-main"
    >
      <div>
        <span>
          Hello World
        </span>
      </div>
    </div>
  </main>
  <footer
    className="jsx-4151687426"
  >
    © 
    後藤のブログ
  </footer>
</div>
`;

exports[`Layout renders collectly with title 1`] = `
<div
  className="jsx-4151687426 page"
>
  <title
    className="jsx-4151687426"
  >
    ページタイトル | 後藤のブログ
  </title>
  <link
    className="jsx-4151687426"
    href="/favicon.ico"
    rel="icon"
  />
  <header
    className="jsx-4151687426"
  >
    <h1
      className="jsx-4151687426 site-title"
    >
      <a
        className="jsx-4151687426"
        href="/"
      >
        後藤のブログ
      </a>
    </h1>
  </header>
  <main
    className="jsx-4151687426"
  >
    <h1
      className="jsx-4151687426 page-title"
    >
      ページタイトル
    </h1>
    <div
      className="jsx-4151687426 page-main"
    />
  </main>
  <footer
    className="jsx-4151687426"
  >
    © 
    後藤のブログ
  </footer>
</div>
`;
